<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Contacts</string>
    <string name="title_contact">Contact</string>
    <string name="title_about">About</string>
    <string name="title_service">Service</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_xmlrefresh">Xml Refresh</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="title_activity_contact_detail">Contact Detail</string>
    <string name="contact_item_first">First Name</string>
    <string name="contact_item_last">Last Name</string>
    <string name="contact_item_phone">Phone</string>
    <string name="contact_item_email">Email</string>
    <string name="base_uri">http://train-contacts.lightips.org/</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="f_service_btn_startserice">Start</string>
    <string name="f_service_btn_pauseserice">Pause</string>
    <string name="f_service_btn_resumeserice">Resume</string>
    <string name="f_service_btn_stopserice">Stop</string>

</resources>
