<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Main" >
    <item android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/action_example"
        android:showAsAction="withText|ifRoom" />
    <item android:id="@+id/action_new"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/action_refresh"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"/>
    <item android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/action_refresh"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"/>
    <item android:id="@+id/action_xmlrefresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/action_xmlrefresh"
        android:orderInCategory="100"
        android:showAsAction="never"/>
</menu>
